--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
 
     <script>
 
-        let ipURL = 'http://localhost:3000';
         let ipAddress = document.querySelector('.ip-address');
         let country = document.querySelector('.location');
         let timezone = document.querySelector('.timezone');
@@ -108,9 +107,11 @@
         form.addEventListener('submit', (e) => {
             e.preventDefault();
 
-            document.querySelector('button').addEventListener('click', getLocation);
+            getLocation();
 
         })
+
+        // UPDATE MAP WITH IPIFY API
 
         async function getLocation() {
             let val = document.querySelector('input').value;
@@ -119,7 +120,11 @@
 
             const response = await fetch('/', {
                 method: 'POST',
-                body: JSON.stringify({ ipAddress: val })
+                body: JSON.stringify({ ipAddress: val }),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+
             });
 
             let data = await response.json();
@@ -160,7 +165,6 @@
             console.log(e);
         }
 
-        // UPDATE MAP VIEW WITH 'IPIFY' API
 
 
     </script>
